Update Posts “2017-03-26-2017-03-26-interior-designer”

--- a/_posts/2017-03-26-2017-03-26-interior-designer.md
+++ b/_posts/2017-03-26-2017-03-26-interior-designer.md
@@ -4,7 +4,7 @@ subtitle: >-
   Interior design is “the art or process of designing the interior, often
   including the exterior, of a room or building”.
 date: '2017-03-26'
-thumb_img_path: images/1.jpg
+thumb_img_path: /images/moon.jpg
 excerpt: >-
   Interior design is “the art or process of designing the interior, often
   including the exterior, of a room or building”. An interior designer is
